--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,13 @@ version '1.0-SNAPSHOT'
 repositories {
     mavenCentral()
 }
+sourceCompatibility = 11
 
 dependencies {
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.8.2'
+    testImplementation 'org.testng:testng:7.4.0'
+
 }
 
 test {
-    useJUnitPlatform()
+    useTestNG()
 }
