--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,9 @@ repositories {
 sourceCompatibility = 11
 
 dependencies {
-    testImplementation 'org.testng:testng:7.4.0'
-
+    testImplementation 'junit:junit:4.13'
 }
 
 test {
-    useTestNG()
+    useJUnit()
 }
